--- a/.gitconfig
+++ b/.gitconfig
@@ -1,5 +1,3 @@
-[push]
-	default = current
 [rerere]
 	enabled = true
 [core]
@@ -14,12 +12,15 @@
 [tag]
 	gpgSign = true
 [push]
+	autoSetupRemote = true
+	default = current
 	gpgSign = if-asked
 [color]
 	ui = true
 [alias]
 	amend = commit --amend
 	bn = branch-name
+	branch-log = !git log $(git main)..@
 	branch-mv = branch -f
 	branch-name = !"git rev-parse --abbrev-ref \"${1:-HEAD}\" #"
 	co = checkout
@@ -37,15 +38,17 @@
 	fork-point = !git merge-base --fork-point $(git main)
 	forkpt = fork-point
 	lg = log --graph --pretty='format:%C(auto)%h%C(magenta)% G?%C(cyan)%<(16)% ad%C(green)%<(12,trunc)% aN%C(reset)% s%C(auto)%+d' --date=human-local
+	lgb = !git lg $(git main)..@
 	lgfp = lg --first-parent
 	main = !"git remote-main 2>/dev/null || git for-each-ref --format='%(refname:short)' refs/heads | grep -x main || echo master #"
 	prefix = exec bash -c 'echo ${GIT_PREFIX}'
 	pub = publish
 	publish = !git push -u origin $(git bn)
-	pushf = push --force-with-lease
+	pushf = push --force-with-lease --force-if-includes
 	rba = rebase --abort
 	rbc = rebase --continue
 	rbi = rebase --interactive --autosquash
+	rbifp = !git rbi $(git forkpt)
 	rbm = !git rebase --autostash origin/$(git main)
 	rbs = rebase --skip
 	remote-main = !"(set -o pipefail && git symbolic-ref refs/remotes/origin/HEAD | sed 's@^refs/remotes/origin/@@') #"
